[gd_scene load_steps=6 format=2]

[ext_resource path="res://Scenes/Hand/Hand.tscn" type="PackedScene" id=1]
[ext_resource path="res://Scenes/Root/Root.gd" type="Script" id=2]
[ext_resource path="res://Scenes/UI/UI.tscn" type="PackedScene" id=3]
[ext_resource path="res://Scenes/Card/Card.tscn" type="PackedScene" id=4]
[ext_resource path="res://fonts/roboto_bold.tres" type="DynamicFont" id=5]

[node name="Root" type="Node2D"]
script = ExtResource( 2 )

[node name="DealerHand" parent="." instance=ExtResource( 1 )]
position = Vector2( 63, 105 )
z_index = 1

[node name="Card" parent="." instance=ExtResource( 4 )]
position = Vector2( 910, 299 )
scale = Vector2( 6, 6 )
z_index = 1
animation = "deck"
frame = 3

[node name="PlayerHand" parent="." instance=ExtResource( 1 )]
position = Vector2( 63, 498 )
z_index = 5

[node name="Node2D" type="Node2D" parent="."]
z_index = 8

[node name="Result" type="Label" parent="Node2D"]
visible = false
margin_top = 424.0
margin_right = 911.0
margin_bottom = 572.0
custom_fonts/font = ExtResource( 5 )
text = "Win"
align = 2
valign = 1

[node name="UI" parent="." instance=ExtResource( 3 )]

[node name="Hand" parent="UI/Player" index="0"]
visible = true

[node name="Label" parent="UI/Player" index="1"]
margin_left = 984.0
margin_right = 1024.0

[connection signal="pressed" from="UI/Center/BetControll/plus" to="." method="_on_plus_pressed"]
[connection signal="pressed" from="UI/Center/BetControll/minus" to="." method="_on_minus_pressed"]
[connection signal="pressed" from="UI/Center/BetControll/One" to="." method="_on_One_pressed"]
[connection signal="pressed" from="UI/Center/Hand Controll/Hit" to="." method="_on_Hit_pressed"]
[connection signal="pressed" from="UI/Center/Hand Controll/Stand" to="." method="_on_Stand_pressed"]

[editable path="UI"]
